Notas Clase 3 formas de vincular CSS & JavaScript

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabo</title>
+    <title>Gabo</title> 
+    <style>
+        main{
+            background-color: blue;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-   <header>
-    Aqui va el encabezado
+   <header id="header" class="header" style="background-color: red;">
+    <div class="logo">
+        <img id="./images/logo.png" alt="Logo: Gabriel ">
+    </div>
+    <div class="menu-principal">
+        <a href="#">Categorias</a>
+        <a href="#">Biografia</a>
+        <a href="#">Premios</a>
+    </div>
    </header> 
    <main>
         Aqui va el contenido principal
@@ -15,7 +28,7 @@
    <aside>
         Aqui van los widgets de la pagina
    </aside>
-   <footer>
+   <footer class="footer">
         Aqui van los widgets de la pagina
         Aqui va el pie de pagina
    </footer>
