index.html: Finaliza Header/Menu

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
             color: white;
         }
     </style>
+    <link rel="stylesheet" href="./CSS/main.css">
 </head>
 <body>
-   <header id="header" class="header" style="background-color: red;">
+   <header id="header" class="header">
     <div class="logo">
-        <img id="./images/logo.png" alt="Logo: Gabriel ">
+        <img id="logo" src="./images/logo.png" alt="Logo: Gabriel ">
     </div>
     <div class="menu-principal">
         <a href="#">Categorias</a>
@@ -24,6 +25,7 @@
    </header> 
    <main>
         Aqui va el contenido principal
+        <button onclick="Saluda()">Saludame</button>
    </main>
    <aside>
         Aqui van los widgets de la pagina
