--- a/index.html
+++ b/index.html
@@ -3,37 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabo</title> 
-    <style>
-        main{
-            background-color: blue;
-            color: white;
-        }
-    </style>
-    <link rel="stylesheet" href="./CSS/main.css">
+    <title>Gabo</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-   <header id="header" class="header">
-    <div class="logo">
-        <img id="logo" src="./images/logo.png" alt="Logo: Gabriel ">
-    </div>
-    <div class="menu-principal">
-        <a href="#">Categorias</a>
-        <a href="#">Biografia</a>
-        <a href="#">Premios</a>
-    </div>
-   </header> 
-   <main>
+    <!-- CSS (Forma 1): style inline -->
+    <header>
+        <div class="menu-principal">
+            <a href="#">Categorias</a>
+            <a href="#">Biografia</a>
+            <a href="#">Premios</a>
+        </div>
+        <div class="logo">
+            <img id="logo" src="./images/logo.png" alt="Logo: Gabriel ">
+        </div>
+        
+    </header>
+    <main class="main">
+        <div class="banner">
+            <h1 class="banner-tittle">Gabriel Garcia Marquez</h1>
+        </div>
         Aqui va el contenido principal
-        <button onclick="Saluda()">Saludame</button>
-   </main>
-   <aside>
-        Aqui van los widgets de la pagina
-   </aside>
-   <footer class="footer">
-        Aqui van los widgets de la pagina
+    </main>
+    
+    <footer class="footer">
+        Aqui van los Widgets de la pagina
         Aqui va el pie de pagina
-   </footer>
+    </footer>
 
+    <script src="./js/main.js"></script>
 </body>
 </html>
