--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <h2 class="premios-title">Premios de Gabo</h2>
 
             <table border="1" cellspacing="1" cellpadding="1">
+                
+                <tbody>
                 <tr>
                     <td colspan="2">Col 1</td>
                     
@@ -59,6 +61,16 @@
                     <td>Col 4</td>
                     <td>Col 5</td>
                 </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Encabezado</th>
+                        <th>Encabezado</th>
+                        <th>Encabezado</th>
+                        <th>Encabezado</th>
+                        <th>Encabezado</th>
+                    </tr>
+                </thead>
             </table>
         </section>          
     </main>
